--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <script>
       System.import('app.js').then(null, console.error.bind(console));
     </script>
-
+<inventory-app></inventory-app>
   </body>
 </html>
